--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
   - python setup.py install
 # command to run tests
 script:
-  - nosetests sageopt/tests
+  - nosetests --with-coverage sageopt
