--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ install:
   - python setup.py install
 # command to run tests
 script:
-  - nosetests --with-coverage sageopt
+  - nosetests --with-coverage --cover-package=sageopt
+  - coveralls
