--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
 # command to run tests
 script:
   - nosetests --with-coverage --cover-package=sageopt
-  - coveralls
+  - coveralls --rcfile=.coveralls_publish_config
