--- a/.coveralls_publish_config
+++ b/.coveralls_publish_config
@@ -3,6 +3,7 @@ omit =
     sageopt/tests/*
     sageopt/coniclifts/problems/solvers/mosek.py
     sageopt/coniclifts/constraints/constraint.py
+    sageopt/coniclifts/constraints/set_membership/setmem.py
     sageopt/coniclifts/problems/solvers/solver.py
 # Run this file locally, with the following command:
 # nosetests --with-coverage --cover-package=sageopt --cover-config-file=.fullcoveragerc
