added interop/cvxpy.py. Much like interop/scipy.py, this new file overrides some cvxpy functions. By adding this file and making changes to symbolic/utilities.py, Signomial objects now allow cvxpy Expressions as coefficient vectors.

--- a/.coveralls_publish_config
+++ b/.coveralls_publish_config
@@ -5,5 +5,6 @@ omit =
     sageopt/coniclifts/constraints/constraint.py
     sageopt/coniclifts/constraints/set_membership/setmem.py
     sageopt/coniclifts/problems/solvers/solver.py
+    sageopt/interop/cvxpy.py
 # Run this file locally, with the following command:
 # nosetests --with-coverage --cover-package=sageopt --cover-config-file=.fullcoveragerc
