Add more user-settable Mosek options. Change a docstring. Change coveralls config.

--- a/.coveralls_publish_config
+++ b/.coveralls_publish_config
@@ -6,5 +6,6 @@ omit =
     sageopt/coniclifts/constraints/set_membership/setmem.py
     sageopt/coniclifts/problems/solvers/solver.py
     sageopt/interop/cvxpy.py
+    sageopt/interop/gpkit.py
 # Run this file locally, with the following command:
 # nosetests --with-coverage --cover-package=sageopt --cover-config-file=.fullcoveragerc
