Test gpkit integration. Swap nose for nose2.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ language: python
 python:
   - "3.6"
   - "3.7"
-# command to install dependencies
+# command to install dependencies (2nd and 3rd pip calls just for GPKit integration)
 install:
-  - pip install scipy>=1.1 numpy>=1.14 ecos>=2 nose coverage coveralls
+  - pip install scipy>=1.1 numpy>=1.14 ecos>=2 nose2 coverage coveralls
+  - pip install pint cvxopt ad
+  - pip install gpkit
   - python setup.py install
 # command to run tests
 script:
-  - nosetests --with-coverage --cover-package=sageopt
+  - nose2 --with-coverage --cover-package=sageopt
   - coveralls --rcfile=.coveralls_publish_config
