--- a/.coveralls_publish_config
+++ b/.coveralls_publish_config
@@ -6,6 +6,5 @@ omit =
     sageopt/coniclifts/constraints/set_membership/setmem.py
     sageopt/coniclifts/problems/solvers/solver.py
     sageopt/interop/cvxpy.py
-    sageopt/interop/gpkit.py
 # Run this file locally, with the following command:
-# nosetests --with-coverage --cover-package=sageopt --cover-config-file=.fullcoveragerc
+# nose2 --with-coverage --coverage-config=.coveralls_publish_config
