--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ install:
   - python setup.py install
 # command to run tests
 script:
-  - nose2 --with-coverage --cover-package=sageopt
+  - nose2 --with-coverage --coverage-config=.coveralls_publish_config
   - coveralls --rcfile=.coveralls_publish_config
