--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ language: python
 python:
   - "3.6"
   - "3.7"
-# command to install dependencies (3nd and 4th pip calls just for GPKit integration)
+  - "3.8"
+  - "3.9"
+# command to install dependencies (3rd and 4th pip calls just for GPKit integration)
 install:
-  - pip install scipy>=1.1 numpy>=1.14 ecos>=2 coveralls
+  - pip install scipy>=1.1 numpy>=1.16.5 ecos>=2 coveralls
   - pip install nose2[coverage_plugin]
   - pip install pint cvxopt ad
   - pip install gpkit==0.9.9.2
